[gd_scene load_steps=44 format=2]

[ext_resource path="res://Fonts/911Fonts.com_CenturyGothicRegular__-_911fonts.com_fonts_mhpY.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Bumpo.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Components/HighScore.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/play_theme1_square.png" type="Texture" id=4]
[ext_resource path="res://Scripts/MainScreen.gd" type="Script" id=7]
[ext_resource path="res://Art/3_b.png" type="Texture" id=8]
[ext_resource path="res://Art/3_c.png" type="Texture" id=9]
[ext_resource path="res://Art/play_theme2_square.png" type="Texture" id=10]
[ext_resource path="res://Art/3_a.png" type="Texture" id=11]
[ext_resource path="res://themes/1/buttons/Sound_pressed.tres" type="StyleBox" id=12]
[ext_resource path="res://themes/1/buttons/Themes_pressed.tres" type="StyleBox" id=13]
[ext_resource path="res://themes/1/settings_buttons_font.tres" type="DynamicFont" id=14]
[ext_resource path="res://themes/1/buttons/Sound_normal.tres" type="StyleBox" id=29]
[ext_resource path="res://themes/1/buttons/Themes_normal.tres" type="StyleBox" id=30]
[ext_resource path="res://themes/1/buttons/RateUs_pressed.tres" type="StyleBox" id=31]
[ext_resource path="res://themes/1/buttons/RateUs_normal.tres" type="StyleBox" id=32]
[ext_resource path="res://Scripts/SoundMainScreen.gd" type="Script" id=41]

[sub_resource type="DynamicFont" id=1]
size = 80
use_filter = true
extra_spacing_top = 14
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 700, 700 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 700, 700 )
modulate_color = Color( 0.870588, 0.843137, 0.686275, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 700, 700 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=7]
size = 80
use_filter = true
extra_spacing_top = 14
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=8]
flags = 4
load_path = "res://.import/win_cup.png-45f6dbb9cb9ec0bfa8bf528218fdb3f0.stex"

[sub_resource type="DynamicFont" id=9]
size = 80
use_filter = true
extra_spacing_top = -8
extra_spacing_bottom = -8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 25
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 700, 700 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 700, 700 )
modulate_color = Color( 0.4, 0.654902, 0.756863, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 700, 700 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 215, 215 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 215, 215 )
modulate_color = Color( 0.4, 0.654902, 0.756863, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=18]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 215, 215 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 215, 215 )
modulate_color = Color( 0.4, 0.654902, 0.756863, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=22]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 215, 215 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=24]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 215, 215 )
modulate_color = Color( 0.4, 0.654902, 0.756863, 1 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=26]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[node name="MainScreen" type="Node"]
script = ExtResource( 7 )

[node name="Theme_1" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Theme_1"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.996078, 0.94902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Control" parent="Theme_1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -128.0
margin_bottom = -128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Theme_1/Logo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.5
margin_top = -49.5
margin_right = 93.5
margin_bottom = 49.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.882353, 0.729412, 0.109804, 1 )
text = "2187"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" parent="Theme_1" instance=ExtResource( 3 )]

[node name="Buttons" type="VBoxContainer" parent="Theme_1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -133.0
margin_right = 120.0
margin_bottom = 197.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton_1" type="Button" parent="Theme_1/Buttons"]
margin_right = 240.0
margin_bottom = 240.0
rect_min_size = Vector2( 240, 240 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButtons" type="HBoxContainer" parent="Theme_1/Buttons"]
margin_top = 260.0
margin_right = 240.0
margin_bottom = 330.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star_button_1" type="Button" parent="Theme_1/Buttons/SettingsButtons"]
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 0
size_flags_vertical = 2
custom_styles/hover = ExtResource( 32 )
custom_styles/pressed = ExtResource( 31 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = ExtResource( 32 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.882353, 0.729412, 0.109804, 1 )

[node name="Theme_button_1" type="Button" parent="Theme_1/Buttons/SettingsButtons"]
margin_left = 85.0
margin_right = 155.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 6
size_flags_vertical = 2
custom_styles/hover = ExtResource( 30 )
custom_styles/pressed = ExtResource( 13 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = ExtResource( 30 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.882353, 0.729412, 0.109804, 1 )

[node name="Sound_button_1" type="Button" parent="Theme_1/Buttons/SettingsButtons"]
margin_left = 170.0
margin_right = 240.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 0
size_flags_vertical = 2
custom_styles/hover = ExtResource( 29 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = ExtResource( 29 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.882353, 0.729412, 0.109804, 1 )

[node name="Theme_2" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Theme_2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Control" parent="Theme_2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -128.0
margin_bottom = -128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Theme_2/Logo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.5
margin_top = -49.5
margin_right = 93.5
margin_bottom = 49.5
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.219608, 0.670588, 0.843137, 1 )
text = "2187"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="CenterContainer" parent="Theme_2"]
anchor_right = 1.0
margin_top = 152.0
margin_bottom = 271.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Theme_2/HighScore"]
margin_left = 148.0
margin_right = 428.0
margin_bottom = 119.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="icon" type="TextureRect" parent="Theme_2/HighScore/HBoxContainer"]
modulate = Color( 0.219608, 0.670588, 0.843137, 1 )
margin_top = 9.0
margin_right = 100.0
margin_bottom = 109.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Theme_2/HighScore/HBoxContainer"]
margin_left = 104.0
margin_right = 280.0
margin_bottom = 119.0

[node name="Score" type="Label" parent="Theme_2/HighScore/HBoxContainer/VBoxContainer"]
margin_right = 176.0
margin_bottom = 83.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.219608, 0.670588, 0.843137, 1 )
text = "4046"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Theme_2/HighScore/HBoxContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 176.0
margin_bottom = 119.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.219608, 0.670588, 0.843137, 1 )
text = "HIGH SCORE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Theme_2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -133.0
margin_right = 120.0
margin_bottom = 197.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton_2" type="Button" parent="Theme_2/Buttons"]
margin_right = 240.0
margin_bottom = 240.0
rect_min_size = Vector2( 240, 240 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButtons" type="HBoxContainer" parent="Theme_2/Buttons"]
margin_top = 260.0
margin_right = 240.0
margin_bottom = 330.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star_button_2" type="Button" parent="Theme_2/Buttons/SettingsButtons"]
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 0
size_flags_vertical = 2
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 0.882353, 0.729412, 0.109804, 1 )

[node name="Theme_button_2" type="Button" parent="Theme_2/Buttons/SettingsButtons"]
margin_left = 85.0
margin_right = 155.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 6
size_flags_vertical = 2
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 21 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 22 )
custom_colors/font_color = Color( 0.882353, 0.729412, 0.109804, 1 )

[node name="Sound_button_2" type="Button" parent="Theme_2/Buttons/SettingsButtons"]
margin_left = 170.0
margin_right = 240.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 0
size_flags_vertical = 2
custom_styles/hover = SubResource( 23 )
custom_styles/pressed = SubResource( 24 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 23 )
custom_fonts/font = SubResource( 26 )
custom_colors/font_color = Color( 0.882353, 0.729412, 0.109804, 1 )

[node name="Sound" type="Node" parent="."]
script = ExtResource( 41 )

[connection signal="pressed" from="Theme_1/Buttons/PlayButton_1" to="." method="_on_Button_1_pressed"]
[connection signal="pressed" from="Theme_1/Buttons/PlayButton_1" to="Sound" method="_on_Button_1_pressed"]
[connection signal="pressed" from="Theme_1/Buttons/SettingsButtons/Star_button_1" to="." method="_on_Star_button_1_pressed"]
[connection signal="pressed" from="Theme_1/Buttons/SettingsButtons/Star_button_1" to="Sound" method="_on_Star_button_1_pressed"]
[connection signal="pressed" from="Theme_1/Buttons/SettingsButtons/Theme_button_1" to="." method="_on_Theme_button_1_pressed"]
[connection signal="pressed" from="Theme_1/Buttons/SettingsButtons/Theme_button_1" to="Sound" method="_on_Theme_button_1_pressed"]
[connection signal="pressed" from="Theme_1/Buttons/SettingsButtons/Sound_button_1" to="." method="_on_Sound_button_1_pressed"]
[connection signal="pressed" from="Theme_1/Buttons/SettingsButtons/Sound_button_1" to="Sound" method="_on_Sound_button_1_pressed"]
[connection signal="pressed" from="Theme_2/Buttons/PlayButton_2" to="." method="_on_PlayButton_2_pressed"]
[connection signal="pressed" from="Theme_2/Buttons/PlayButton_2" to="Sound" method="_on_PlayButton_2_pressed"]
[connection signal="pressed" from="Theme_2/Buttons/SettingsButtons/Star_button_2" to="." method="_on_Star_button_2_pressed"]
[connection signal="pressed" from="Theme_2/Buttons/SettingsButtons/Star_button_2" to="Sound" method="_on_Star_button_2_pressed"]
[connection signal="pressed" from="Theme_2/Buttons/SettingsButtons/Theme_button_2" to="." method="_on_Theme_button_2_pressed"]
[connection signal="pressed" from="Theme_2/Buttons/SettingsButtons/Theme_button_2" to="Sound" method="_on_Theme_button_2_pressed"]
[connection signal="pressed" from="Theme_2/Buttons/SettingsButtons/Sound_button_2" to="." method="_on_Sound_button_2_pressed"]
[connection signal="pressed" from="Theme_2/Buttons/SettingsButtons/Sound_button_2" to="Sound" method="_on_Sound_button_2_pressed"]
