extends Node


func _on_Button_1_pressed():
	SoundManager.play_fixed_sound("click")


func _on_Star_button_1_pressed():
	SoundManager.play_fixed_sound("click")


func _on_Theme_button_1_pressed():
	SoundManager.play_fixed_sound("click")


func _on_Sound_button_1_pressed():
	SoundManager.play_fixed_sound("click")


func _on_Theme_button_2_pressed():
	SoundManager.play_fixed_sound("click")


func _on_Sound_button_2_pressed():
	SoundManager.play_fixed_sound("click")


func _on_Star_button_2_pressed():
	SoundManager.play_fixed_sound("click")


func _on_PlayButton_2_pressed():
	SoundManager.play_fixed_sound("click")
